// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`not a card matches snapshot 1`] = `
<div
  style={
    Object {
      "border": "1px solid black",
      "maxWidth": "146 px",
    }
  }
>
  The card 
   has a weird format and we can't display it.
</div>
`;

exports[`regular card matches snapshot 1`] = `
<Fragment>
  <Tooltip
    animateFill={true}
    animation="shift"
    arrow={false}
    arrowSize="regular"
    className=""
    delay={0}
    disabled={false}
    distance={10}
    duration={375}
    followCursor={false}
    hideDelay={0}
    hideDuration={375}
    hideOnClick={true}
    html={
      <img
        className="tooltip-img"
        src="https://img.scryfall.com/cards/normal/front/c/6/c6d47162-749b-47d5-9589-8f1dbf60b9f3.jpg?1555041067"
      />
    }
    inertia={false}
    interactive={false}
    interactiveBorder={2}
    multiple={false}
    offset={0}
    onHidden={[Function]}
    onHide={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    onShown={[Function]}
    popperOptions={Object {}}
    position="right"
    size="regular"
    sticky={false}
    stickyDuration={200}
    style={Object {}}
    theme="dark"
    touchHold={false}
    trigger="mouseenter"
    unmountHTMLWhenHide={false}
    zIndex={9999}
  >
    <img
      src="https://img.scryfall.com/cards/small/front/c/6/c6d47162-749b-47d5-9589-8f1dbf60b9f3.jpg?1555041067"
    />
  </Tooltip>
</Fragment>
`;

exports[`split card matches snapshot 1`] = `
<Fragment>
  <Tooltip
    animateFill={true}
    animation="shift"
    arrow={false}
    arrowSize="regular"
    className=""
    delay={0}
    disabled={false}
    distance={10}
    duration={375}
    followCursor={false}
    hideDelay={0}
    hideDuration={375}
    hideOnClick={true}
    html={
      <img
        className="tooltip-img tooltip-split"
        src="https://img.scryfall.com/cards/normal/front/f/5/f59ea6f6-2dff-4e58-9166-57cac03f1d0a.jpg?1549941875"
      />
    }
    inertia={false}
    interactive={false}
    interactiveBorder={2}
    multiple={false}
    offset={0}
    onHidden={[Function]}
    onHide={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    onShown={[Function]}
    popperOptions={Object {}}
    position="right"
    size="regular"
    sticky={false}
    stickyDuration={200}
    style={Object {}}
    theme="dark"
    touchHold={false}
    trigger="mouseenter"
    unmountHTMLWhenHide={false}
    zIndex={9999}
  >
    <img
      src="https://img.scryfall.com/cards/small/front/f/5/f59ea6f6-2dff-4e58-9166-57cac03f1d0a.jpg?1549941875"
    />
  </Tooltip>
</Fragment>
`;

exports[`transform card matches snapshot 1`] = `
<Fragment>
  <Tooltip
    animateFill={true}
    animation="shift"
    arrow={false}
    arrowSize="regular"
    className=""
    delay={0}
    disabled={false}
    distance={10}
    duration={375}
    followCursor={false}
    hideDelay={0}
    hideDuration={375}
    hideOnClick={true}
    html={
      <img
        className="tooltip-img"
        src="https://img.scryfall.com/cards/normal/front/7/b/7b215968-93a6-4278-ac61-4e3e8c3c3943.jpg?1566971561"
      />
    }
    inertia={false}
    interactive={false}
    interactiveBorder={2}
    multiple={false}
    offset={0}
    onHidden={[Function]}
    onHide={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    onShown={[Function]}
    popperOptions={Object {}}
    position="right"
    size="regular"
    sticky={false}
    stickyDuration={200}
    style={Object {}}
    theme="dark"
    touchHold={false}
    trigger="mouseenter"
    unmountHTMLWhenHide={false}
    zIndex={9999}
  >
    <img
      src="https://img.scryfall.com/cards/small/front/7/b/7b215968-93a6-4278-ac61-4e3e8c3c3943.jpg?1566971561"
    />
  </Tooltip>
  <Tooltip
    animateFill={true}
    animation="shift"
    arrow={false}
    arrowSize="regular"
    className=""
    delay={0}
    disabled={false}
    distance={10}
    duration={375}
    followCursor={false}
    hideDelay={0}
    hideDuration={375}
    hideOnClick={true}
    html={
      <img
        className="tooltip-img"
        src="https://img.scryfall.com/cards/normal/back/7/b/7b215968-93a6-4278-ac61-4e3e8c3c3943.jpg?1566971561"
      />
    }
    inertia={false}
    interactive={false}
    interactiveBorder={2}
    multiple={false}
    offset={0}
    onHidden={[Function]}
    onHide={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    onShown={[Function]}
    popperOptions={Object {}}
    position="right"
    size="regular"
    sticky={false}
    stickyDuration={200}
    style={Object {}}
    theme="dark"
    touchHold={false}
    trigger="mouseenter"
    unmountHTMLWhenHide={false}
    zIndex={9999}
  >
    <img
      src="https://img.scryfall.com/cards/small/back/7/b/7b215968-93a6-4278-ac61-4e3e8c3c3943.jpg?1566971561"
    />
  </Tooltip>
</Fragment>
`;
